# cpp-test

./: .gitignore  .travis.yml  Makefile  configure.ac
src/: Makefile  Makefile.am  factorial.cpp
test/: Makefile.am  factorial.cpp
